# vmodel-agentic-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: github.json
docs/: agent-governance.md  architecture.md  dashboard.md  github-delivery.md  implementation-plan.md  plantspeak-first-project.md  tool-integrations.md
examples/: plantspeak_requirements.txt  sample_requirements.txt
schemas/: artifact-package.schema.json  traceability-matrix.schema.json
tests/: test_agents.py  test_artifact_quality.py  test_autopilot.py  test_clarifications.py  test_dashboard.py  test_engine.py  test_github_config.py  test_intake.py  test_pipeline.py  test_prompt_generics.py  test_requirements.py
vmodel_engine/: __init__.py  agents.py  artifact_quality.py  artifacts.py  autopilot.py  clarifications.py  cli.py  dashboard.py  delivery.py  engine.py  gates.py  github.py  intake.py  lead_answers.py  models.py  pipeline.py  planning.py  project_templates.py  questions.py  release.py  requirements.py  security_scan.py  tooling.py  work_items.py
