[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vmodel-agentic-engine"
version = "0.1.0"
description = "Agentic V-model software development engine MVP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Open Source Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
vmodel-engine = "vmodel_engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["vmodel_engine*"]
